k8s/base/common.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: securestream
