k8s/base/simulator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simulator
  namespace: securestream
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simulator
  template:
    metadata:
      labels:
        app: simulator
    spec:
      containers:
      - name: simulator
        image: sstream-sim:v1
        imagePullPolicy: IfNotPresent
