k8s/base/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: securestream
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
  clusterIP: None # Headless
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: securestream
spec:
  serviceName: "postgres-service"
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:16-alpine
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: pgdata
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: pgdata
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
